Many changes to the footer, header and home page components.

--- a/views/components/header/header-home.ejs
+++ b/views/components/header/header-home.ejs
@@ -1,4 +1,4 @@
-<div class="header-title full-screen-title white" style="background-image:url(/images/hd-13.jpg);">
+<div class="header-title full-screen-title white" style="background-image:url(<%= common.assets %>/home.jpg);">
     <div class="overlaybox">
         <div class="container">
             <div class="title-base">
