--- a/views/components/header/header.ejs
+++ b/views/components/header/header.ejs
@@ -4,9 +4,9 @@
             <div class="container">
                 <div class="nav navbar-nav navbar-left">
                     <div class="contact-group">
-                        <span><i class="im-phone-2"></i>+01-23-4226789</span>
+                      <span><i class="im-phone-2"></i><%= common.phone.display %></span>
                         <hr />
-                        <span><i class="im-envelope"></i>hello@example.com</span>
+                        <span><i class="im-envelope"></i><%= common.email %></span>
                         <hr />
                         <span><i class="im-calendar-4"></i> Mon - Sat: 9:00 - 18:00 </span>
                     </div>
@@ -17,14 +17,14 @@
             <div class="container">
                 <div class="scroll-hide">
                     <div class="container">
-                        <a class="navbar-brand center" href="../../index.html">
+                        <a class="navbar-brand center" href="/">
                                 <img class="logo-default" src="../../../images/logo.png" alt="logo" />
                                 <img class="logo-retina" src="../../../images/logo-retina.png" alt="logo" />
                             </a>
                     </div>
                 </div>
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="../../index.html">
+                    <a class="navbar-brand" href="/">
                             <img class="logo-default" src="../../../images/logo.png" alt="logo" />
                             <img class="logo-retina" src="../../../images/logo-retina.png" alt="logo" />
                         </a>
@@ -52,26 +52,8 @@
                     </ul>
                     <div class="nav navbar-nav navbar-right">
                         <div class="custom-area">
-                            <a href="../../contacts-1.html" class="btn btn-sm">Get in touch</a>
+                            <a href="/contact" class="btn btn-sm">Get in touch</a>
                         </div>
-                        <form class="navbar-form" role="search">
-                            <div class="search-box-menu">
-                                <div class="search-box scrolldown">
-                                    <input type="text" class="form-control" placeholder="Search for...">
-                                </div>
-                                <button type="button" class="btn btn-default btn-search">
-                                        <span class="fa fa-search"></span>
-                                    </button>
-                            </div>
-                        </form>
-                        <ul class="nav navbar-nav lan-menu">
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">EN</a>
-                                <ul class="dropdown-menu">
-                                    <li><a>IT</a></li>
-                                </ul>
-                            </li>
-                        </ul>
                     </div>
                 </div>
             </div>
