--- a/views/components/footer/footer.ejs
+++ b/views/components/footer/footer.ejs
@@ -2,49 +2,40 @@
     <div class="container content">
         <div class="row">
             <div class="col-md-4">
-                <img class="logo" src="../../../images/logo.png" />
+                <img class="logo" src="" />
                 <hr class="space s" />
                 <p class="text-s">
-                    Lorem ipsum dolor sit amet, consy ect etu o dolor sitct raqum nemo de amet.
+                    Complete Home Remodeling
                 </p>
                 <hr class="space s" />
-                <div class="btn-group social-group btn-group-icons">
-                    <a target="_blank" href="#" data-social="share-facebook" data-toggle="tooltip"
-                        data-placement="top" title="Facebook">
-                            <i class="fa fa-facebook text-s circle"></i>
-                        </a>
-                    <a target="_blank" href="#" data-social="share-twitter" data-toggle="tooltip" data-placement="top"
-                        title="Twitter">
-                            <i class="fa fa-twitter text-s circle"></i>
-                        </a>
-                    <a target="_blank" href="#" data-social="share-google" data-toggle="tooltip" data-placement="top"
-                        title="Google+">
-                            <i class="fa fa-google-plus text-s circle"></i>
-                        </a>
-                    <a target="_blank" href="#" data-social="share-linkedin" data-toggle="tooltip"
-                        data-placement="top" title="LinkedIn">
-                            <i class="fa fa-linkedin text-s circle"></i>
-                        </a>
+                <div>
+                    <a href="/contact" class="btn btn-sm">Get a free estimate</a>
                 </div>
             </div>
             <div class="col-md-4">
-                <h3 class="text-black text-uppercase">Contact Info</h3>
+                <h3 class="text-black text-uppercase">Contact us</h3>
                 <hr class="space space-30" />
                 <ul class="fa-ul text-s ul-squares">
-                    <li>201 Liverpool Street, Suite 721, London</li>
-                    <li>London, United Kingdom</li>
-                    <li>youremail@yourdomain.com</li>
-                    <li>+88 (0) 101 0000 000</li>
+                    <li>
+                        <%= common.address.street %>
+                    </li>
+                    <li>
+                        <%= common.address.city %>,
+                            <%= common.address.state %>,
+                                <%= common.address.zip %>
+                    </li>
+                    <li><%= common.email %></li>
+                    <li><%= common.phone.display %></li>
                 </ul>
             </div>
             <div class="col-md-4">
-                <h3 class="text-black text-uppercase">Useful resources</h3>
+                <h3 class="text-black text-uppercase">Useful links</h3>
                 <hr class="space space-30" />
                 <div class="footer-menu text-s">
-                    <a href="#">NEWSLETTER</a>
-                    <a href="#">ABOUT US</a>
-                    <a href="#">SUBSCRIBE</a>
-                    <a href="#">CONTACTS</a>
+                    <a href="/about">ABOUT US</a>
+                    <a href="/services">SERVICES</a>
+                    <a href="/projects">PROJECTS</a>
+                    <a href="/contact">CONTACT</a>
                 </div>
             </div>
         </div>
