Added components to the about page

--- a/views/components/header/header-title.ejs
+++ b/views/components/header/header-title.ejs
@@ -3,15 +3,14 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="title-base text-left">
-                    <h1>Title base</h1>
-                    <p>Things don't have to change the world to be important</p>
+                  <h1><%= title %></h1>
+                  <p><%= description %></p>
                 </div>
             </div>
             <div class="col-md-3">
                 <ol class="breadcrumb b">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Features</a></li>
-                    <li class="active">Titles</li>
+                    <li><a href="/">Home</a></li>
+                    <li class="active"><%= title %></li>
                 </ol>
             </div>
         </div>
