--- a/public/css/skin.css
+++ b/public/css/skin.css
@@ -511,7 +511,8 @@ h2 {
     }
 
 .header-base {
-    padding-bottom: 60px !important;
+    padding-top: 100px !important;
+    padding-bottom: 100px !important;
 }
 
     .header-base .breadcrumb {
