--- a/views/components/about/about-content.ejs
+++ b/views/components/about/about-content.ejs
@@ -1,1 +1,6 @@
-<h3>Electro Integrity about page</h3>
+<!-- TITLE -->
+<% include ../header/header-title %>
+<!-- ABOUT -->
+<% include section-about %>
+<!-- TEAM -->
+<% include section-team %>
