--- a/views/components/home/section-features.ejs
+++ b/views/components/home/section-features.ejs
@@ -28,7 +28,7 @@
                     data-trigger="hover">
                   <a class="img-box"><img class="anima" src="<%= common.assets %>/remodel.jpg" alt="Remodel feature" /> </a>
                     <div class="advs-box-content">
-                        <h3>Remodels</h3>
+                        <h3>Remodel</h3>
                         <p>Complete home remodeling services</p>
                         <a class="btn btn-sm" href="/services">Learn more</a>
                     </div>
