Added content to the services, projects and contact pages.

--- a/views/components/footer/footer.ejs
+++ b/views/components/footer/footer.ejs
@@ -2,11 +2,7 @@
     <div class="container content">
         <div class="row">
             <div class="col-md-4">
-                <img class="logo" src="" />
-                <hr class="space s" />
-                <p class="text-s">
-                    Complete Home Remodeling
-                </p>
+                <img class="logo" src="<%= common.assets %>/logo.png" />
                 <hr class="space s" />
                 <div>
                     <a href="/contact" class="btn btn-sm">Get a free estimate</a>
