--- a/views/components/header/header.ejs
+++ b/views/components/header/header.ejs
@@ -4,7 +4,7 @@
             <div class="container">
                 <div class="nav navbar-nav navbar-left">
                     <div class="contact-group">
-                      <span><i class="im-phone-2"></i><%= common.phone.display %></span>
+                        <span><i class="im-phone-2"></i><%= common.phone.display %></span>
                         <hr />
                         <span><i class="im-envelope"></i><%= common.email %></span>
                         <hr />
@@ -18,15 +18,15 @@
                 <div class="scroll-hide">
                     <div class="container">
                         <a class="navbar-brand center" href="/">
-                                <img class="logo-default" src="../../../images/logo.png" alt="logo" />
-                                <img class="logo-retina" src="../../../images/logo-retina.png" alt="logo" />
+                          <img class="logo-default" src="<%= common.assets %>/logo.png" alt="logo"/>
+                                <img class="logo-retina" src="<%= common.assets %>/logo.png" alt="logo" />
                             </a>
                     </div>
                 </div>
                 <div class="navbar-header">
                     <a class="navbar-brand" href="/">
-                            <img class="logo-default" src="../../../images/logo.png" alt="logo" />
-                            <img class="logo-retina" src="../../../images/logo-retina.png" alt="logo" />
+                            <img class="logo-default" src="<%= common.assets %>/logo.png" alt="logo" />
+                            <img class="logo-retina" src="<%= common.assets %>/logo.png" alt="logo" />
                         </a>
                     <button type="button" class="navbar-toggle">
                             <i class="fa fa-bars"></i>
