--- a/views/components/projects/projects-content.ejs
+++ b/views/components/projects/projects-content.ejs
@@ -1,1 +1,5 @@
-<h3>Electro Integrity projects page</h3>
+<!-- TITLE -->
+<% include ../header/header-title %>
+<!-- PROJECTS -->
+<% include section-projects-list %>
+
