--- a/views/components/services/services-content.ejs
+++ b/views/components/services/services-content.ejs
@@ -1,1 +1,9 @@
-<h3>Electro Integrity services page</h3>
+<!-- TITLE -->
+<% include ../header/header-title %>
+<!-- RESIDENTIAL -->
+<% include section-residential %>
+<!-- CTA -->
+<% include ../common/cta-one %>
+<!-- COMMERCIAL -->
+<% include section-commercial %>
+
