--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -2,3 +2,6 @@
     <script src="<%=src %>"></script>
     <% }) %>
         <link rel="stylesheet" href="/js/iconsmind/line-icons.min.css">
+        <% if (state === 'contact') { %>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdNjb0maBMhvMUc9pYa4sTo6_3lqnxvhI" async defer></script>
+        <% } %>
