--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7068,7 +7068,7 @@ MENU - RESPONSIVE
     .navbar-brand {
         margin-top: 0 !important;
         margin-right: 5px;
-        max-width: 80%;
+        max-width: 50%;
         height: auto;
         padding-left: 15px;
     }
@@ -7784,5 +7784,9 @@ CUSTOM STYLING
 }
 
 .margin-top-25 {
-  margin-top: 25px !important;
+    margin-top: 25px !important;
+}
+
+.margin-top-50 {
+  margin-top: 50px;
 }
