--- a/views/components/contact/contact-content.ejs
+++ b/views/components/contact/contact-content.ejs
@@ -1,1 +1,6 @@
-<h3>Electro Integrity contact page</h3>
+<!-- TITLE -->
+<% include ../header/header-title %>
+<!-- MAP -->
+<% include section-map %> 
+<!-- CONTACT FORM -->
+<% include section-contact-form %>
