Added some more content to the home page.

--- a/views/components/home/section-features.ejs
+++ b/views/components/home/section-features.ejs
@@ -1,42 +1,50 @@
 <div class="section-empty section-item">
     <div class="container content">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="advs-box advs-box-multiple boxed-inverse" data-anima="scale-rotate"
                     data-trigger="hover">
                     <a class="img-box"><img class="anima" src="<%= common.assets %>/residential.jpg" alt="Residential feature"/> </a>
                     <div class="advs-box-content">
                         <h3>Residential</h3>
+                        <ul>
+                          <li>Single family homes</li>
+                          <li>Multi units</li>
+                          <li>Full remodels</li>
+                          <li>Acoustic ceilings</li>
+                        </ul>
                         <a class="btn btn-sm" href="/services">Learn more</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="advs-box advs-box-multiple boxed-inverse" data-anima="scale-rotate"
                     data-trigger="hover">
                   <a class="img-box"><img class="anima" src="<%= common.assets %>/commercial.jpg" alt="Commercial feature" /> </a>
                     <div class="advs-box-content">
                         <h3>Commercial</h3>
+                        <ul>
+                          <li>Retail store fronts</li>
+                          <li>Bars & retaurants</li>
+                          <li>Start up offices</li>
+                          <li>Music studios</li>
+                        </ul>
                         <a class="btn btn-sm" href="/services">Learn more</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="advs-box advs-box-multiple boxed-inverse" data-anima="scale-rotate"
-                    data-trigger="hover">
-                  <a class="img-box"><img class="anima" src="<%= common.assets %>/remodel.jpg" alt="Remodel feature" /> </a>
-                    <div class="advs-box-content">
-                        <h3>Remodel</h3>
-                        <a class="btn btn-sm" href="/services">Learn more</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="advs-box advs-box-multiple boxed-inverse" data-anima="scale-rotate"
                     data-trigger="hover">
                   <a class="img-box"><img class="anima" src="<%= common.assets %>/retrofit.jpg" alt="" /> </a>
                     <div class="advs-box-content">
                         <h3>Retrofit</h3>
+                        <ul>
+                          <li>Dust infiltration</li>
+                          <li>Kitchens</li>
+                          <li>Bathrooms</li>
+                          <li>Additional Dwelling Units</li>
+                        </ul>
                         <a class="btn btn-sm" href="/services">Learn more</a>
                     </div>
                 </div>
