--- a/views/components/home/section-icons.ejs
+++ b/views/components/home/section-icons.ejs
@@ -1,47 +1,36 @@
 <div class="section-empty bg-white">
     <div class="container content">
         <div class="row" data-anima="fade-bottom" data-timeline="asc" data-timeline-time="300">
-            <div class="col-md-3 anima">
+            <div class="col-md-4 anima">
                 <div class="icon-box">
                     <div class="icon-box-cell">
                         <i class="im-drill text-xl"></i>
                     </div>
                     <div class="icon-box-cell">
                         <label class="text-m">Planning</label>
-                        <p class="text-s">Careful planning</p>
+                        <p class="text-s">Careful planning which includes a pre-construction meeting.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 anima">
+            <div class="col-md-4 anima">
                 <div class="icon-box">
                     <div class="icon-box-cell">
                         <i class="im-pencil-ruler text-xl"></i>
                     </div>
                     <div class="icon-box-cell">
                         <label class="text-m">Engineering</label>
-                        <p class="text-s">Problem solving</p>
+                        <p class="text-s">Innovative problem solving tailored to each client.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 anima">
+            <div class="col-md-4 anima">
                 <div class="icon-box">
                     <div class="icon-box-cell">
                         <i class="im-crane text-xl"></i>
                     </div>
                     <div class="icon-box-cell">
                         <label class="text-m">Construction</label>
-                        <p class="text-s">Quality craftsmanship</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 anima">
-                <div class="icon-box">
-                    <div class="icon-box-cell">
-                        <i class="im-solar text-xl"></i>
-                    </div>
-                    <div class="icon-box-cell">
-                        <label class="text-m">Satisfaction</label>
-                        <p class="text-s">Delivering results</p>
+                        <p class="text-s">Quality craftsmanship on time and on budget.</p>
                     </div>
                 </div>
             </div>
