Added content to the about and services pages.

--- a/views/components/about/section-about.ejs
+++ b/views/components/about/section-about.ejs
@@ -8,16 +8,15 @@
                     <p>Learn about our background and history</p>
                 </div>
                 <p>
-                    Proactively architect world-class best practices without 24/365 growth strategies.
-                    Quickly integrate interactive infrastructures and extensible
-                    content. Holisticly engage world-class interfaces via an expanded
-                    array of solutions. Seamlessly reinvent collaborative outsourcing
-                    and multimedia based solutions. Intrinsicly foster B2C users
-                    rather than interoperable experiences.
+                    Olcan Construction was founded by Olcan McMahon in 2012. Originally from Ireland,
+                    Olcan moved to the Bay Area in 2002 and worked across numerous
+                    verticals in the construction industry before starting Olcan
+                    Construction as a General Contractor. Olcan Construction prioritises
+                    being clean and tidy whilst remaining on time and on budget.
                 </p>
             </div>
             <div class="col-md-4">
-              <img src="https://via.placeholder.com/450x450" alt="Team photo">
+                <img src="https://via.placeholder.com/450x450" alt="Team photo">
             </div>
         </div>
     </div>
