--- a/views/components/services/section-commercial.ejs
+++ b/views/components/services/section-commercial.ejs
@@ -12,31 +12,28 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="advs-box advs-box-top-icon boxed text-left" data-href="">
-                    <i class="im-home icon circle"></i>
-                    <h3>Homes</h3>
+                    <i class="im-post-office icon circle"></i>
+                    <h3>Retail Store Fronts</h3>
                     <p>
-                        Interdum iusto pulvinar consequuntur augue optio, rep ta fusceod tempor incididunt
-                        utlabore et doasprio martisio.
+                      Commercial upgrades and remodels to retail store fronts.
                     </p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="advs-box advs-box-top-icon boxed text-left" data-href="">
-                    <i class="im-home icon circle"></i>
-                    <h3>Homes</h3>
+                    <i class="im-plates icon circle"></i>
+                    <h3>Bar & Restaurant Remodels</h3>
                     <p>
-                        Interdum iusto pulvinar consequuntur augue optio, rep ta fusceod tempor incididunt
-                        utlabore et doasprio martisio.
+                      Bar and restaurant remodels are one of our specialized services.
                     </p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="advs-box advs-box-top-icon boxed text-left" data-href="">
-                    <i class="im-home icon circle"></i>
-                    <h3>Homes</h3>
+                    <i class="im-office icon circle"></i>
+                    <h3>Office Buildings</h3>
                     <p>
-                        Interdum iusto pulvinar consequuntur augue optio, rep ta fusceod tempor incididunt
-                        utlabore et doasprio martisio.
+                      Whether for a start up or a fortune 500 we handle commercial office building projects.
                     </p>
                 </div>
             </div>
@@ -44,31 +41,28 @@
         <div class="row margin-top-50">
             <div class="col-md-4">
                 <div class="advs-box advs-box-top-icon boxed text-left" data-href="">
-                    <i class="im-home icon circle"></i>
-                    <h3>Homes</h3>
+                    <i class="im-mic icon circle"></i>
+                    <h3>Studios</h3>
                     <p>
-                        Interdum iusto pulvinar consequuntur augue optio, rep ta fusceod tempor incididunt
-                        utlabore et doasprio martisio.
+                      We upgrade music studios with the latest acoustic and soundproofing tech.
                     </p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="advs-box advs-box-top-icon boxed text-left" data-href="">
-                    <i class="im-home icon circle"></i>
-                    <h3>Homes</h3>
+                    <i class="im-warehouse icon circle"></i>
+                    <h3>Commercial Remodels</h3>
                     <p>
-                        Interdum iusto pulvinar consequuntur augue optio, rep ta fusceod tempor incididunt
-                        utlabore et doasprio martisio.
+                      Reach out to us for large or small scale commercial grade projects.
                     </p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="advs-box advs-box-top-icon boxed text-left" data-href="">
-                    <i class="im-home icon circle"></i>
-                    <h3>Homes</h3>
+                    <i class="im-structure icon circle"></i>
+                    <h3>Tenant Improvements</h3>
                     <p>
-                        Interdum iusto pulvinar consequuntur augue optio, rep ta fusceod tempor incididunt
-                        utlabore et doasprio martisio.
+                      Commercial and industrial property tenant improvements.  
                     </p>
                 </div>
             </div>
