--- a/views/components/services/section-residential.ejs
+++ b/views/components/services/section-residential.ejs
@@ -13,30 +13,27 @@
             <div class="col-md-4">
                 <div class="advs-box advs-box-top-icon boxed text-left" data-href="">
                     <i class="im-home icon circle"></i>
-                    <h3>Homes</h3>
+                    <h3>Single Family Homes</h3>
                     <p>
-                        Interdum iusto pulvinar consequuntur augue optio, rep ta fusceod tempor incididunt
-                        utlabore et doasprio martisio.
+                      We are experienced in single family remodels and new builds.
                     </p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="advs-box advs-box-top-icon boxed text-left" data-href="">
-                    <i class="im-home icon circle"></i>
-                    <h3>Homes</h3>
+                    <i class="im-building icon circle"></i>
+                    <h3>Multi Unit Buildings</h3>
                     <p>
-                        Interdum iusto pulvinar consequuntur augue optio, rep ta fusceod tempor incididunt
-                        utlabore et doasprio martisio.
+                      Large multi unit remodels are a large part of our skillset and services offered.
                     </p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="advs-box advs-box-top-icon boxed text-left" data-href="">
-                    <i class="im-home icon circle"></i>
-                    <h3>Homes</h3>
+                    <i class="im-home-2 icon circle"></i>
+                    <h3>Remodels</h3>
                     <p>
-                        Interdum iusto pulvinar consequuntur augue optio, rep ta fusceod tempor incididunt
-                        utlabore et doasprio martisio.
+                      Upgrading your property with a remodel will increase its value and boost your quality of life. 
                     </p>
                 </div>
             </div>
@@ -44,31 +41,28 @@
         <div class="row margin-top-50">
             <div class="col-md-4">
                 <div class="advs-box advs-box-top-icon boxed text-left" data-href="">
-                    <i class="im-home icon circle"></i>
-                    <h3>Homes</h3>
+                    <i class="im-drill icon circle"></i>
+                    <h3>Kitchens</h3>
                     <p>
-                        Interdum iusto pulvinar consequuntur augue optio, rep ta fusceod tempor incididunt
-                        utlabore et doasprio martisio.
+                      We take care of plans, design and construction to make your dream kitchen.
                     </p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="advs-box advs-box-top-icon boxed text-left" data-href="">
-                    <i class="im-home icon circle"></i>
-                    <h3>Homes</h3>
+                    <i class="im-drop icon circle"></i>
+                    <h3>Bathrooms</h3>
                     <p>
-                        Interdum iusto pulvinar consequuntur augue optio, rep ta fusceod tempor incididunt
-                        utlabore et doasprio martisio.
+                      Upgrade you bathroom or ensuite with the latest design trends.
                     </p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="advs-box advs-box-top-icon boxed text-left" data-href="">
-                    <i class="im-home icon circle"></i>
-                    <h3>Homes</h3>
+                    <i class="im-loudspeaker icon circle"></i>
+                    <h3>Acoustic Ceilings</h3>
                     <p>
-                        Interdum iusto pulvinar consequuntur augue optio, rep ta fusceod tempor incididunt
-                        utlabore et doasprio martisio.
+                      We also specialize in acoustic ceilings, sound proofing and sound mitigation.
                     </p>
                 </div>
             </div>
