--- a/views/components/about/section-team.ejs
+++ b/views/components/about/section-team.ejs
@@ -44,10 +44,10 @@
                                         </a>
                         </div>
                         <div class="col-md-8">
-                            <h2><a>Team member 2</a></h2>
+                            <h2><a>Francis McElhune</a></h2>
                             <hr>
                             <div class="tag-row icon-row">
-                                <span><i class="im-user"></i><a>Project manager</a></span>
+                                <span><i class="im-user"></i><a>Foreman</a></span>
                             </div>
                             <p>
                                 Culpa. Sapiente inceptos facilisi, molestiae veritatis expedita gravida deserunt,
@@ -70,7 +70,7 @@
                                         </a>
                         </div>
                         <div class="col-md-8">
-                            <h2><a>Team member 3</a></h2>
+                            <h2><a>Patrick McBerty</a></h2>
                             <hr>
                             <div class="tag-row icon-row">
                                 <span><i class="im-user"></i><a>Foreman</a></span>
@@ -94,10 +94,60 @@
                                         </a>
                         </div>
                         <div class="col-md-8">
-                            <h2><a>Team member 4</a></h2>
+                            <h2><a>Cesar Rosales</a></h2>
                             <hr>
                             <div class="tag-row icon-row">
-                                <span><i class="im-user"></i><a>carpenter</a></span>
+                                <span><i class="im-user"></i><a>Carpenter</a></span>
+                            </div>
+                            <p>
+                                Culpa. Sapiente inceptos facilisi, molestiae veritatis expedita gravida deserunt,
+                                augue consectetuer delectus! Molestias? Illum quas
+                                deleniti
+                            </p>
+                        </div>
+                    </div>
+                </div>`
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="advs-box advs-box-side-img advs-box-blog boxed-inverse" data-anima="scale-rotate"
+                    data-trigger="hover">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <a class="img-box">
+                                            <img class="anima" src="https://via.placeholder.com/210x160" alt="" />
+                                        </a>
+                        </div>
+                        <div class="col-md-8">
+                            <h2><a>Israel Gonzales</a></h2>
+                            <hr>
+                            <div class="tag-row icon-row">
+                                <span><i class="im-user"></i><a>Carpenter</a></span>
+                            </div>
+                            <p>
+                                Culpa. Sapiente inceptos facilisi, molestiae veritatis expedita gravida deserunt,
+                                augue consectetuer delectus! Molestias? Illum quas
+                                deleniti
+                            </p>
+                        </div>
+                    </div>
+                </div>`
+            </div>
+            <div class="col-md-6">
+                <div class="advs-box advs-box-side-img advs-box-blog boxed-inverse" data-anima="scale-rotate"
+                    data-trigger="hover">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <a class="img-box">
+                                            <img class="anima" src="https://via.placeholder.com/210x160" alt="" />
+                                        </a>
+                        </div>
+                        <div class="col-md-8">
+                            <h2><a>Katy McMahon</a></h2>
+                            <hr>
+                            <div class="tag-row icon-row">
+                                <span><i class="im-user"></i><a>Office Manager</a></span>
                             </div>
                             <p>
                                 Culpa. Sapiente inceptos facilisi, molestiae veritatis expedita gravida deserunt,
